# bat_autorunner

./: Cargo.toml  README.md
src/: main.rs  service.rs  terminal.rs  ui.rs  utils.rs
